test/errors/executor/runtime_type_power.ms
print 1 ^ "power"
// Runtime Error - Type (Line 1, Column 18): power expects two numbers, instead got values of type TYPE_NUMBER and TYPE_STRING
